Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2713

jom's up-to-date check is incomplete for inference rule targets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.1.0
    • Qt Creator 2.0.1
    • Jom
    • None

    Description

      to reproduce:

      • build qmake from Qt 4.7 branch
      • touch winmakefile.cpp
      • run jom

      Nothing happens. Jom thinks that all files are up-to-date.

      Reason: applyInferenceRules is only called for leaves. The target "winmakefile.obj" has only the qmake_pch.obj as dependent until the inference rule is applied.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes