fix incomplete up-to-date check for inference rule targets

Task-number: QTCREATORBUG-2713